<resources>
    <string name="progName">EasyHealthRecord Droid</string>
    <string name="progAuthor">Copyright &#x00A9; 2015&#8211;2024 Chien-Hong Chan</string>
    <string name="progEmail">E-mail: woofdogtw@gmail.com</string>
    <string name="progAbout">is a simple health recording program.</string>
    <string name="progVersion">Version: </string>
    <string name="progMail">&lt;a href="mailto:woofdogtw@gmail.com"&gt;Mail to me&lt;/a&gt;</string>
    <string name="progWebsite">&lt;a href="https://easyhealthrecord.firebaseapp.com/index.html"&gt;Visit to my website&lt;/a&gt;</string>
    <string name="titleDbList">Database List</string>
    <string name="titleUntitled">[Untitled]</string>
    <string name="titleStBodyWeight">Body Weight Analysis</string>
    <string name="titleStBloodPressure">Blood Pressure Analysis</string>
    <string name="titleStBloodGlucose">Blood Glucose Analysis</string>
    <string name="recBodyWeight">Body Weight</string>
    <string name="recBloodPressure">Blood Pressure</string>
    <string name="recBloodGlucose">Blood Glucose</string>
    <string name="recDate">Date</string>
    <string name="recComment">Comment</string>
    <string name="recWeight">Weight</string>
    <string name="recFat">Fat</string>
    <string name="recIntFat">Int. fat</string>
    <string name="recBmi">BMI</string>
    <string name="recWc">Waist circ.</string>
    <string name="recBone">Bone</string>
    <string name="recMuscle">Muscle</string>
    <string name="recWater">Water</string>
    <string name="recMetabolic">Metabolic</string>
    <string name="recAge">Body age</string>
    <string name="recSystolic">Systolic</string>
    <string name="recDiastolic">Diastolic</string>
    <string name="recPulse">Pulse</string>
    <string name="recGlucose">Glucose</string>
    <string name="recMeal">Meal</string>
    <string name="recMealNormal">Normal</string>
    <string name="recMealBefore">Before meal</string>
    <string name="recMealAfter">After meal</string>
    <string name="unitWeight">kg,lb</string>
    <string name="unitPercent">%</string>
    <string name="unitCirc">cm,inch</string>
    <string name="unitCalories">kcal</string>
    <string name="unitPressure">mmHg</string>
    <string name="unitPulse">beats/min</string>
    <string name="unitGlucose">mg/dL,mmol/L</string>
    <string name="unitPrefix">&#x0020;(</string>
    <string name="unitPostfix">)</string>
    <string name="stNew">Latest</string>
    <string name="stMin">Minimum</string>
    <string name="stMax">Maximum</string>
    <string name="stAvg">Average</string>
    <string name="mAbout">About</string>
    <string name="mOptions">Options</string>
    <string name="mOptSync">Synchronization</string>
    <string name="mCancel">Cancel</string>
    <string name="mCreate">Create</string>
    <string name="mCreateAs">Create as This</string>
    <string name="mDelete">Delete</string>
    <string name="mModify">Modify</string>
    <string name="mDbSelect">Select Files</string>
    <string name="mDbRestore">Restore</string>
    <string name="mDbRename">Rename File</string>
    <string name="mDbDesc">Edit Description</string>
    <string name="mDbBackup">Backup</string>
    <string name="mRecFind">Find</string>
    <string name="mRecRange">Display Range</string>
    <string name="mRecSt">Statistics</string>
    <string name="mRecSync">Synchronize</string>
    <string name="mRecSaveAs">Save As</string>
    <string name="mRecImport">Import</string>
    <string name="mRecExportCsv">Export CSV</string>
    <string name="tooltipNavOptSync">Edit synchronization options for the program</string>
    <string name="tooltipNavAbout">Show the application\'s About information</string>
    <string name="tooltipDbSelect">Select multiple files</string>
    <string name="tooltipDbCreate">Create a new database file</string>
    <string name="tooltipDbRestore">Restore database files</string>
    <string name="tooltipDbRename">Rename this database file</string>
    <string name="tooltipDbDesc">Edit the description of this database file</string>
    <string name="tooltipDbDelete">Delete this database file</string>
    <string name="tooltipDbDeleteItems">Delete the selected database files</string>
    <string name="tooltipDbBackup">Backup this database file</string>
    <string name="tooltipDbBackupItems">Backup the selected database files</string>
    <string name="tooltipDbCancel">Cancel selection</string>
    <string name="tooltipRecCreate">Create a new record</string>
    <string name="tooltipRecCreateAs">Create a new record as this record</string>
    <string name="tooltipRecDelete">Delete this record</string>
    <string name="tooltipRecModify">Modify this record</string>
    <string name="tooltipRecFind">Find entries using keywords</string>
    <string name="tooltipRecRange">Set date range for displaying</string>
    <string name="tooltipRecSt">Display simple analysis result</string>
    <string name="tooltipRecSync">Synchronize the local database and the network database</string>
    <string name="tooltipRecSaveAs">Save the database under a new file</string>
    <string name="tooltipRecImport">Import supported database content into the current database file</string>
    <string name="tooltipRecExportCsv">Export current database content to a CSV file</string>
    <string name="dErrEmpty">Cannot be empty</string>
    <string name="dErrDbOperation">An error occurred. please try again.</string>
    <string name="dAppUpgradeTitle">Old version database files has been detected</string>
    <string name="dAppUpgradeImport">An old version of the database files has been detected. Do you want to allow automatic import of the database file? This action requires permission to be enabled</string>
    <string name="dAppUpgradeImportSelf">You can use the file restore function in the lower right corner. Turn on \"Show hidden files\" in the file browser, and go to the root directory to find \"databases\" in \"tw.idv.woofdog.easyhealthrecord\" to select the file you want to restore.</string>
    <string name="dDbTitleCreate">New Database</string>
    <string name="dDbTitleDelete">Delete Database</string>
    <string name="dDbTitleDescript">Database Description</string>
    <string name="dDbTitleRename">Database File Name</string>
    <string name="dDbLabelFileName">Database file name</string>
    <string name="dDbLabelDescript">Database description</string>
    <string name="dDbErrFileExists">File exists!</string>
    <string name="dDbErrFileName">Cannot with \ / : * ? " &lt; &gt; |</string>
    <string name="dDbBackupExists">The database file is exist. Overwrite it using the selected file?</string>
    <string name="dDbDelete">The database file will be removed. Are you sure?</string>
    <string name="dRecTitleCreate">Create Record</string>
    <string name="dRecTitleDelete">Delete Record</string>
    <string name="dRecTitleModify">Modify Record</string>
    <string name="dRecErrValue">Zero or positive number</string>
    <string name="dOptSyncUseNone">Disable</string>
    <string name="dOptSyncUseFtp">Use FTP</string>
    <string name="dOptSyncUseFtps">Use FTPS</string>
    <string name="dOptSyncUseSftp">Use SFTP</string>
    <string name="dOptSyncUseGoogle">Use Google Drive</string>
    <string name="dOptSyncUseMs">Use Microsoft OneDrive</string>
    <string name="dOptSyncLoginRem">Remember login information</string>
    <string name="dOptSyncDir">Database file directory</string>
    <string name="dOptSyncFtpGroup">FTP Settings</string>
    <string name="dOptSyncFtpHost">Host name or IP address</string>
    <string name="dOptSyncFtpPort">Port number</string>
    <string name="dOptSyncFtpUser">User name</string>
    <string name="dOptSyncFtpPass">Password</string>
    <string name="dOptSyncGoogleGroup">Google Drive Settings</string>
    <string name="dOptSyncMsGroup">Microsoft OneDrive Settings</string>
    <string name="dOptSyncErrPortRange">1 ~ 65535</string>
    <string name="dStCalAll">All</string>
    <string name="dStCalRange">Range</string>
    <string name="dFindFrom">From</string>
    <string name="dFindTo">To</string>
    <string name="dSyncTitle">Database Synchronization</string>
    <string name="dSyncStart">Synchronizing database...</string>
    <string name="dSyncDone">Synchronization complete.</string>
    <string name="dSyncCancel">Synchronization cancelled.</string>
    <string name="dSyncErrError">Unknown error.</string>
    <string name="dSyncErrConn">Cannot connect to the remote host.</string>
    <string name="dSyncErrLogin">Login error.</string>
    <string name="dSyncErrUserPass">User name or password error.</string>
    <string name="dSyncErrDir">Cannot find the database directory.</string>
    <string name="dSyncErrGet">Cannot find the database file.</string>
    <string name="dSyncErrPut">Something wrong when sending database.</string>
    <string name="dSyncErrRen">Finalize synchronization error.</string>
    <string name="dSyncWarnOpt">You must enable the remote host settings. Please use \"Menu\" -&gt; \"Synchronization\" to set it up.</string>
    <string name="bCancel">Cancel</string>
    <string name="bMenu">Menu</string>
    <string name="bNo">No</string>
    <string name="bOk">OK</string>
    <string name="bYes">Yes</string>
    <string name="bNoMoreHint">Do not remind again</string>
</resources>