<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RecBodyWeightFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:id="@+id/recTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow android:weightSum="5">

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/recWeight" />

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/recFat" />

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/recIntFat" />

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/recBmi" />

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/recWc" />
            </TableRow>

            <TableRow android:weightSum="5">

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/recBone" />

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/recMuscle" />

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/recWater" />

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/recMetabolic" />

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/recAge" />
            </TableRow>
        </TableLayout>

        <ListView
            android:id="@+id/recListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/recTable"
            android:fadeScrollbars="true"
            android:fastScrollEnabled="true" />
    </RelativeLayout>
</FrameLayout>