<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/allButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dStCalAll" />

            <RadioButton
                android:id="@+id/rangeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dStCalRange" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dFindFrom" />

        <DatePicker
            android:id="@+id/fromDatePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dFindTo" />

        <DatePicker
            android:id="@+id/toDatePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            tools:ignore="UnusedAttribute" />
    </TableLayout>
</ScrollView>
